--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ a { text-decoration: none; }
 
 li { list-style: none; }
 
-img, ion-icon, a, button, time, span { display: block; }
+img, i, a, button, time, span { display: block; }
 
 button {
   font: inherit;
@@ -204,7 +204,7 @@ article {
   z-index: -1;
 }
 
-.icon-box ion-icon { --ionicon-stroke-width: 35px; }
+.icon-box { --ionicon-stroke-width: 35px; }
 
 article { display: none; }
 
@@ -352,11 +352,13 @@ main {
   border-radius: 8px;
 }
 
-.info_more-btn {
+.sidebare-info .info_more-btn {
   position: absolute;
+  margin-top: 2%;
+  margin-right: 2%;
   top: -15px;
   right: -15px;
-  border-radius: 0 15px;
+  border-radius: 15px;
   font-size: 13px;
   color: var(--orange-yellow-crayola);
   background: var(--border-gradient-onyx);
@@ -368,7 +370,7 @@ main {
 
 .info_more-btn::before {
   content: "";
-  position: absolute;
+  position: relative;
   inset: 1px;
   border-radius: inherit;
   background: var(--bg-gradient-jet);
