--- a/css/style.css
+++ b/css/style.css
@@ -127,15 +127,26 @@ a { text-decoration: none; }
 
 li { list-style: none; }
 
-img, i, a, button, time, span { display: block; }
+img, i, a, button, time { display: block; }
 
+img{
+  margin-left: auto;
+  margin-right: auto;
+}
 button {
+  margin-left: auto;
+  margin-right: auto;
   font: inherit;
   background: none;
-  border: none;
+  border:none;
   text-align: left;
   cursor: pointer;
+  display:flex;
+  font-size: 8px;
 }
+/* .align-right{
+  align: right;
+} */
 
 input, textarea {
   display: block;
@@ -189,7 +200,6 @@ article {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
   color: var(--orange-yellow-crayola);
   box-shadow: var(--shadow-1);
   z-index: 1;
@@ -199,9 +209,10 @@ article {
   content: "";
   position: absolute;
   inset: 1px;
-  background: var(--eerie-black-1);
+  background: var(--border-gradient-onyx);
   border-radius: inherit;
   z-index: -1;
+  font-size: 2px;
 }
 
 .icon-box { --ionicon-stroke-width: 35px; }
@@ -323,6 +334,7 @@ main {
 
 .sidebar-info {
   position: relative;
+  
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -331,7 +343,8 @@ main {
 
 .avatar-box {
   background: var(--bg-gradient-onyx);
-  border-radius: 20px;
+  border-radius: 2px;
+  
 }
 
 .info-content .name {
@@ -339,7 +352,8 @@ main {
   font-size: var(--fs-3);
   font-weight: var(--fw-500);
   letter-spacing: -0.25px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .info-content .title {
@@ -348,11 +362,11 @@ main {
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
   width: max-content;
-  padding: 3px 12px;
+  padding: 3px 10px;
   border-radius: 8px;
 }
 
-.sidebare-info .info_more-btn {
+.avatar-box.info_more-btn {
   position: absolute;
   margin-top: 2%;
   margin-right: 2%;
@@ -360,8 +374,8 @@ main {
   right: -15px;
   border-radius: 15px;
   font-size: 13px;
-  color: var(--orange-yellow-crayola);
-  background: var(--border-gradient-onyx);
+  /* color: var(--orange-yellow-crayola);
+  background: var(--border-gradient-onyx); */
   padding: 10px;
   box-shadow: var(--shadow-2);
   transition: var(--transition-1);
@@ -370,19 +384,25 @@ main {
 
 .info_more-btn::before {
   content: "";
-  position: relative;
+  position: absolute;
+  margin-top: 2%;
+  margin-right: 2%;
   inset: 1px;
   border-radius: inherit;
-  background: var(--bg-gradient-jet);
-  transition: var(--transition-1);
+  /* background: var(--bg-gradient-jet);
+  transition: var(--transition-1); */
   z-index: -1;
 }
 
 .info_more-btn:hover,
-.info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
+.info_more-btn:focus { 
+  background: rgb(75, 75, 75); 
+  border-radius: 4px;
+
+}
 
 .info_more-btn:hover::before,
-.info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
+/* .info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); } */
 
 .info_more-btn span { display: none; }
 
@@ -442,7 +462,7 @@ main {
 
 .social-item .social-link {
   color: var(--light-gray-70);
-  font-size: 18px;
+  font-size: 15px;
 }
 
 
@@ -1212,11 +1232,11 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar {
-    max-height: 180px;
+    max-height: 300px;
     margin-bottom: 30px;
   }
 
-  .sidebar.active { max-height: 584px; }
+  .sidebar.active { max-height: 595px; }
 
   .sidebar-info { gap: 25px; }
 
