--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body { background: var(--smoky-black); }
 
 .sidebar,
 article {
-  background: var(--eerie-black-2);
+  background: #717171;
   border: 1px solid var(--jet);
   border-radius: 20px;
   padding: 15px;
@@ -326,12 +326,12 @@ main {
 
 .sidebar {
   margin-bottom: 15px;
-  max-height: 112px;
+  max-height: 185px;
   overflow: hidden;
   transition: var(--transition-2);
 }
 
-.sidebar.active { max-height: 405px; }
+.sidebar.active { max-height: 410px; }
 
 .sidebar-info {
   position: relative;
@@ -344,7 +344,7 @@ main {
 
 .avatar-box {
   background: var(--bg-gradient-onyx);
-  border-radius: 2px;
+  border-radius: 9px;
   
 }
 
@@ -435,9 +435,7 @@ main {
   max-width: calc(100% - 46px);
   width: calc(100% - 46px);
 }
-/* .contact-link{
-  size: 100px;
-} */
+
 .contact-title {
   color: var(--light-gray-70);
   font-size: var(--fs-8);
@@ -447,7 +445,7 @@ main {
 
 .contact-info :is(.contact-link, time, address) {
   color: var(--white-2);
-  font-size: var(--fs-7);
+  font-size: 13px;
 }
 
 .contact-info address { font-style: normal; }
@@ -463,7 +461,7 @@ main {
 
 .social-item .social-link {
   color: var(--light-gray-70);
-  font-size: 15px;
+  font-size: 19px;
 }
 
 
@@ -623,6 +621,7 @@ about slides
   #ABOUT
 \*-----------------------------------*/
 
+
 .about .article-title { margin-bottom: 15px; }
 
 .about-text {
@@ -632,7 +631,10 @@ about slides
   line-height: 1.6;
 }
 
-.about-text p { margin-bottom: 15px; }
+.about-text p { 
+  margin-bottom: 15px; 
+  margin-top: 10px;
+}
 
 
 
@@ -659,7 +661,7 @@ about slides
   display: flex;
   align-items: center;
   gap: 15px;
-  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .timeline-list {
@@ -1072,7 +1074,9 @@ about slides
   border-radius: 14px;
   outline: none;
 }
-
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(43, 42, 42);
+}
 .form-input::placeholder { font-weight: var(--fw-500); }
 
 .form-input:focus { border-color: var(--orange-yellow-crayola); }
